--- a/package.json
+++ b/package.json
@@ -9,15 +9,42 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo-google-fonts/inter": "^0.2.3",
+    "@expo-google-fonts/montserrat": "^0.2.3",
+    "@expo-google-fonts/poppins": "^0.2.3",
+    "@gorhom/bottom-sheet": "^4.4.7",
+    "@react-native-async-storage/async-storage": "1.17.11",
+    "@react-navigation/bottom-tabs": "^6.5.7",
+    "@react-navigation/native": "^6.1.6",
+    "@react-navigation/stack": "^6.3.16",
+    "axios": "^1.4.0",
+    "chroma-js": "^2.4.2",
     "expo": "~49.0.5",
+    "expo-blur": "~12.2.2",
+    "expo-font": "~11.4.0",
+    "expo-image": "~1.0.1",
+    "expo-image-picker": "~14.1.1",
+    "expo-splash-screen": "~0.18.2",
     "expo-status-bar": "~1.6.0",
+    "lodash": "^4.17.21",
+    "moment": "^2.29.4",
     "react": "18.2.0",
-    "react-native": "0.72.3"
+    "react-native": "0.72.3",
+    "react-native-gesture-handler": "~2.9.0",
+    "react-native-maps": "1.3.2",
+    "react-native-mask-input": "^1.2.3",
+    "react-native-reanimated": "~2.14.4",
+    "react-native-safe-area-context": "4.5.0",
+    "react-native-svg": "13.4.0",
+    "react-native-toast-message": "^2.1.6",
+    "styled-components": "^6.0.5",
+    "usehooks-ts": "^2.9.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/react": "~18.0.14",
-    "typescript": "^5.1.3"
+    "ts-node": "^10.9.1",
+    "typescript": "^5.1.6"
   },
   "private": true
 }
