--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@types/chroma-js": "^2.4.0",
     "@types/react": "~18.0.14",
     "ts-node": "^10.9.1",
     "typescript": "^5.1.6"
