--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-native-maps": "1.3.2",
     "react-native-mask-input": "^1.2.3",
     "react-native-reanimated": "~3.3.0",
+    "react-native-reanimated-carousel": "^3.5.1",
     "react-native-safe-area-context": "4.6.3",
     "react-native-svg": "13.4.0",
     "react-native-toast-message": "^2.1.6",
@@ -43,6 +44,7 @@
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/chroma-js": "^2.4.0",
+    "@types/lodash": "^4.14.197",
     "@types/react": "~18.0.14",
     "ts-node": "^10.9.1",
     "typescript": "^5.1.6"
