--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-  "cSpell.words": ["Ambicoins", "Greenhive"]
+  "cSpell.words": ["Ambicoins", "Ambinews", "Gamification", "Gamified", "Greenhive"]
 }
