--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@react-navigation/stack": "^6.3.16",
     "axios": "^1.4.0",
     "chroma-js": "^2.4.2",
+    "date-fns": "^2.30.0",
     "expo": "~49.0.5",
     "expo-blur": "~12.2.2",
     "expo-font": "~11.4.0",
@@ -35,6 +36,7 @@
     "react-native-mask-input": "^1.2.3",
     "react-native-reanimated": "~3.3.0",
     "react-native-reanimated-carousel": "^3.5.1",
+    "react-native-render-html": "^6.3.4",
     "react-native-safe-area-context": "4.6.3",
     "react-native-svg": "13.4.0",
     "react-native-toast-message": "^2.1.6",
